sqlxo/tests/filter/try/err/wrong_literal.stderr
error: expected string literal: #[sqlxo(table_name = "items")]
 --> tests/filter/try/err/wrong_literal.rs:5:22
  |
5 | #[sqlxo(table_name = 123)]
  |                      ^^^
